Bug 1469403 - Set a flag on the DL builder to indicate if the docshell is active. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D9141